# Myvm

./: .gitignore  Cargo.toml  LICENSE.MD  README.md  hello_world.myvm  my_program.myvm  my_program.vmp  print_emoji.myvm  print_nums.myvm  read_input.myvm  tsconfig.json
src/: assembler.rs  main.rs
src/assembler/: Cargo.toml  grammar.pest  lexer.rs  parser.rs  preprocessor.rs
src/assembler/preprocessor/: macro_expander.rs
src/assembler/src/: grammar.pest  lexer.rs  lib.rs  parser.rs  preprocessor.rs
src/assembler/src/preprocessor/: macro_expander.rs
src/bytecode_interpreter/: Cargo.toml  run.rs
src/wasm_interface/: Cargo.toml  index.js  package.json  webpack.config.js
src/wasm_interface/src/: lib.rs
website/: .eslintrc.json  .gitignore  .prettierrc.json  Cargo.toml  next.config.js  options.tsconfig.json  package-lock.json  package.json  setup.tsconfig.json  tsconfig.json
website/myvm_examples/: HelloWorld.ts  PrintEmoji.ts  PrintNumbers.ts  hello_world.ts  print_numbers.ts
website/pages/: MyvmEditor.tsx  _app.tsx  index.tsx
website/pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
website/src/: main.rs
website/src/components/: Assemble.tsx  Docs.tsx  MyvmEditor.tsx  Run.tsx
website/src/components/Docs/: Advanced.tsx  IO.tsx  Instructions.tsx  Segments.tsx
website/src/interpreter/: BytecodeInterpreter.tsx
website/src/pages/: MyvmEditor.tsx  _app.tsx  index.tsx
website/src/pkg/: index_bg.wasm.d.ts
website/src/util/: Parse.tsx  UseWasm.tsx  parse.ts  parse.tsx  useWindowDimensions.ts
website/styles/: Home.module.scss  custom.bootstrap.scss  index.scss
