[package]
name = "assembler"
version = "0.1.0"
edition = "2021"
authors = ["Bwallker <bwallker.com>"]

[dependencies]

color-eyre = { version = "0.6.1", default-features = false }
pest = "2.1.3"
pest_derive = "2.1.0"
aho-corasick = "0.7.18"
bytecode_interpreter = { path = "../bytecode_interpreter" }