[package]
name = "wasm_interface"
version = "0.1.0"
authors = ["Bwallker"]
edition = "2021"
[profile.dev]
opt-level = "s"
strip = true
debug = 0
dedub-assertion = false
overflow-checks = false
codegen-units = 1
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
assembler = { path = "../assembler" }