[package]
name = "wasm_interface"
version = "0.1.0"
authors = ["Bwallker"]
edition = "2021"
[profile.dev]
opt-level = "s"
strip = true
debug = 0
debug-assertions = false
overflow-checks = false
codegen-units = 256
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
assembler = { path = "../assembler" }